syntax = "proto2";

package harmonyServer;

message StartTFSModel {
  required string experiment_id = 1;
}
